fix: right spacing for sticky state nav

--- a/src/scss/pages/data.scss
+++ b/src/scss/pages/data.scss
@@ -29,6 +29,14 @@ li {
     position: sticky;
     top: 0;
   }
+  @media (min-width: $viewport-md) and (max-width: $viewport-lg) {
+    width: calc(100vw - 3rem);
+    padding-right: 3rem;
+  }
+  @media (min-width: $viewport-ms) and (max-width: $viewport-md) {
+    width: calc(100vw - 1.5rem);
+    padding-right: 1.5rem;
+  }
   h2 {
     margin: 0;
   }
